<resources>
    <!-- Fragment Control car -->
    <string name="app_name">ESP32-CAM Android App</string>
    <string name="action_settings">Settings</string>
    <string name="loadingTextFindIP">Searching your Remote WIFI Car on the network. \n\nPlease wait a few minutes.</string>
    <string name="user_guide_fragment_label">User Guide</string>
    <string name="control_car_fragment_label">Control Car</string>
    <string name="configuration_fragment_label">Configuration</string>
    <string name="config">WIFI and Config</string>
    <string name="claxon">Claxon</string>
    <string name="upButton">Forward</string>
    <string name="downButton">Backward</string>
    <string name="leftButton">Turn left</string>
    <string name="rightButton">Turn right</string>
    <string name="light">Light</string>
    <string name="previous">Previous</string>

    <!-- Fragment Configuration -->
    <string name="configTitle">Configuration</string>
    <string name="wifiConfigTitle">Available WIFI networks</string>
    <string name="wifiDownText">Click to add to your WIFI configuration text box.</string>
    <string name="searchingWIFIText">Searching WIFI networks</string>
    <string name="saveBtn">Save</string>
    <string name="cancelBtn">Cancel</string>
    <string name="savingDataText">Saving data</string>
    <string name="scanWIFIBtn">Scan WIFI networks</string>
    <string name="controlTitle">Control</string>
    <string name="radioButtonButtons">Buttons</string>
    <string name="radioButtonjoystick">Virtual Joystick</string>
    <string name="downControlTitleText">Select your preferred UI control</string>
    <string name="statusTitle">Status</string>
    <string name="ssidWIFIText">SSID</string>
    <string name="passWIFIText">Password</string>

    <!-- Fragment User guide -->
    <string name="userGuideTitle">User Guide</string>
    <string name="firstInstructions">Connect to the vehicle for the first time:</string>
    <string name="firstInstructionsText">Turn on the vehicle, after a few seconds you can connect a WIFI network called (Remote WIFI car). <br /><br />Once connected, press the continue button, and the application will search for the vehicle on the network.</string>
    <string name="secondInstructions">Main control screen:</string>
    <string name="secondInstructionsText">This is the main screen, here you can move the vehicle, sound the horn and turn on the camera light, to configure the vehicle press the gear icon.</string>
    <string name="finalInstructions">Connect the vehicle to your home WIFI network:</string>
    <string name="finalInstructionsText">In the configuration section you can scan the nearby WIFI networks, once you see yours, select it and enter the password if applicable. After saving the changes it is necessary to restart the vehicle and this application.</string>
    <string name="finalInstructions2">Vehicle user interface and control:</string>
    <string name="finalInstructionsText2">You can also set the user interface that best suits you, you can choose between buttons or joystick. <br /><br />If you have a gamepad connected to the device, it will be configured automatically, simply operate the vehicle using the buttons or analog axes.</string>
    <string name="closeUserGuide">I want to play!</string>
    <string name="needHelp">Need help?</string>
    <string name="creditsBtn">Credits</string>
    <string name="helpBtn">Help here</string>

    <!-- Fragment Credits -->
    <string name="titleCredits">Credits</string>
    <string name="creditsText">This project allows you to learn many technological disciplines (Electronics, Computer Science, Robotics, Internet Services), it is an excellent starting point to enter this world.</string>
    <string name="creditsMessage">This application has been developed with a lot of love, it is part of a project built as a family and I invite you to learn.</string>
    <string name="creditsDeveloper">Pablo Toledo</string>
    <string name="creditsBackBtn">Back to settings</string>
    <string name="credits_fragment_label">Credits</string>

</resources>