<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent" android:layout_height="fill_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">


        <TextView
            android:id="@+id/configMainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configTitle"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/wifiNetworkTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/wifiConfigTitle"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/configMainTitle" />

        <TextView
            android:id="@+id/downTitleText"
            android:layout_width="fill_parent"
            android:layout_height="37dp"
            android:layout_marginTop="8dp"
            android:text="@string/wifiDownText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wifiNetworkTitle" />

        <Button
            android:id="@+id/scanWIFIBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scanWIFIBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/downTitleText" />

        <ListView
            android:id="@+id/WIFIList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="195dp"
            tools:layout_editor_absoluteY="159dp"
            app:layout_constraintTop_toBottomOf="@+id/scanWIFIBtn" />


        <EditText
            android:id="@+id/SSIDWIFI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/ssidWIFIText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/WIFIList" />

        <EditText
            android:id="@+id/PassWIFI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/passWIFIText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SSIDWIFI" />

        <TextView
            android:id="@+id/controlTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/controlTitle"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PassWIFI" />

        <TextView
            android:id="@+id/downControlTitleText"
            android:layout_width="fill_parent"
            android:layout_height="37dp"
            android:layout_marginTop="8dp"
            android:text="@string/downControlTitleText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/controlTitle" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/downControlTitleText"
            tools:layout_editor_absoluteX="6dp">

            <RadioButton
                android:id="@+id/radioButtonButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radioButtonButtons" />

            <RadioButton
                android:id="@+id/radioButtonjoystick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radioButtonjoystick" />
        </RadioGroup>

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/saveBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancelBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saveBtn" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>