<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/UserGuideFragment">

    <fragment
        android:id="@+id/UserGuideFragment"
        android:name="com.theretrocenter.esp32_camandroidapp.UserGuideFragment"
        android:label="@string/user_guide_fragment_label"
        tools:layout="@layout/user_guide">

        <action
            android:id="@+id/action_UserGuideFragment_to_ControlCarFragment"
            app:destination="@id/ControlCarFragment" />
    </fragment>

    <fragment
        android:id="@+id/ControlCarFragment"
        android:name="com.theretrocenter.esp32_camandroidapp.ControlCarFragment"
        android:label="@string/control_car_fragment_label"
        tools:layout="@layout/controlcar_joystick">

        <action
            android:id="@+id/action_ControlCarFragment_to_ConfigurationFragment"
            app:destination="@id/ConfigurationFragment" />
    </fragment>

    <fragment
        android:id="@+id/ConfigurationFragment"
        android:name="com.theretrocenter.esp32_camandroidapp.ConfigurationFragment"
        android:label="@string/configuration_fragment_label"
        tools:layout="@layout/configuration">

        <action
            android:id="@+id/action_ConfigurationFragment_to_ControlCarFragment"
            app:destination="@id/ControlCarFragment" />
        <action
            android:id="@+id/action_ConfigurationFragment_to_UserGuideFragment"
            app:destination="@id/UserGuideFragment" />
    </fragment>



</navigation>